--- a/default/data/ui/views/operations.xml
+++ b/default/data/ui/views/operations.xml
@@ -120,6 +120,9 @@
         <option name="charting.chart.stackMode">stacked</option>
         <option name="charting.drilldown">none</option>
         <option name="refresh.display">progressbar</option>
+        <drilldown>
+          <link target="_blank">/app/SplunkforCiscoUmbrella/query_search?form.record=$click.name2$&amp;form.time.earliest=$earliest$&amp;form.time.latest=$latest$</link>
+        </drilldown>
       </chart>
     </panel>
   </row>
@@ -136,7 +139,7 @@
         <option name="drilldown">row</option>
         <option name="refresh.display">progressbar</option>
         <drilldown>
-          <link target="_blank">/app/SplunkforCiscoUmbrella/query_search?form.query=$row.query$&amp;form.reply_code=$row.reply_code$&amp;form.time.earliest=$earliest$&amp;form.time.latest=$latest$</link>
+          <link target="_blank">/app/SplunkforCiscoUmbrella/query_search?form.query=$row.Query$&amp;form.reply_code=$row.Reply Code$&amp;form.time.earliest=$earliest$&amp;form.time.latest=$latest$</link>
         </drilldown>
       </table>
     </panel>
